--- a/src/app/guest/weather-five/weather-five.component.html
+++ b/src/app/guest/weather-five/weather-five.component.html
@@ -17,26 +17,26 @@
             <h1 style="color: white" *ngIf="!myWeather5.currentCity">Waiting...</h1>
         </div>
 
-        <h1 class="city" *ngIf="myWeather5.city.name">{{myWeather5.city.name}}</h1>
+        <h1 class="city" *ngIf="myWeather5.currentCity">{{myWeather5.currentCity}}</h1>
 
-        <div class="cards" *ngIf="myWeather5.city.name">
+        <div class="cards" *ngIf="myWeather5.currentCity">
 
-            <div class="card" *ngFor="let list of myWeather5.list">
+            <div class="card" *ngFor="let item of myWeather5.list">
 
-                <div class="time">{{list.dt_txt}}</div>
+                <div class="time">{{item.dt_txt}}</div>
 
-                <div class="temperature">{{list.main?.temp | number: "1.0-0"}}° C</div>
-                <div class="main" *ngFor="let item of list.weather">
-                    <img src="https://openweathermap.org/img/wn/{{item.icon}}@2x.png" alt="icon">
-                    <p>{{item.main}}</p>
+                <div class="temperature">{{item.main?.temp | number: "1.0-0"}}° C</div>
+                <div class="main" *ngFor="let i of item.weather">
+                    <img src="https://openweathermap.org/img/wn/{{i.icon}}@2x.png" alt="icon">
+                    <p>{{i.main}}</p>
                 </div>
 
                 <div class="details">
-                    <div>Humidity: {{list.main?.humidity}} %</div>
-                    <div>Pressure: {{list.main?.pressure}} hPa</div>
+                    <div>Humidity: {{item.main?.humidity}} %</div>
+                    <div>Pressure: {{item.main?.pressure}} hPa</div>
                     <div class="max-min">
                         <div>
-                            Max/Min: {{list.main?.temp_max | number: "1.0-0"}}° / {{list.main?.temp_min | number:
+                            Max/Min: {{item.main?.temp_max | number: "1.0-0"}}° / {{item.main?.temp_min | number:
                             "1.0-0"}}° C
                         </div>
                     </div>
