--- a/src/app/guest/weather/weather.component.css
+++ b/src/app/guest/weather/weather.component.css
@@ -28,7 +28,7 @@
 .my-content {
     display: flex;
     flex-direction: column;
-    align-items: center;    
+    align-items: center;
     /* border: 2px solid black; */
 }
 
@@ -68,6 +68,10 @@ button:hover+.favorite-list {
     outline: none;
     background: none;
     border: none;
+}
+
+.search img {
+    cursor: pointer;
 }
 
 .favorite-list {
