--- a/src/app/guest/home/home.component.css
+++ b/src/app/guest/home/home.component.css
@@ -1,19 +1,38 @@
-.my-container {    
-    height: 100%;    
+.my-container {
+    height: 100%;
     /* border: 2px solid black; */
 }
 
 .my-content {
+    height: 100%;
+    /* border: 2px solid black; */
+}
+
+.title h1 {
+    width: 100%;
+    margin-top: 80px;
+    text-align: center;
+    font-size: 60px;
+    line-height: 60px;
+    font-weight: 900;
+    color: white;
+    /* -webkit-text-stroke: 1px black; */
+    /* border: 2px solid black; */
+}
+
+.buttons {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     gap: 40px;
+    width: 100%;
     height: 100%;
+    padding-bottom: 120px;
     /* border: 2px solid black; */
 }
 
-.my-container a {
+.buttons a {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -30,7 +49,7 @@
     /* border: 2px solid black; */
 }
 
-.my-container a:hover {
+.buttons a:hover {
     font-size: 20.5px;
     transform: scale(1.01);
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
@@ -38,30 +57,52 @@
 }
 
 @media(max-width: 1260px) {
-    .my-content {
+    .title h1 {
+        font-size: 50px;
+        line-height: 50px;
+    }
+
+    .buttons{
         gap: 30px;
     }
 }
 
 @media(max-width: 1020px) {
-    .my-content {
-        flex-direction: column;
+    .title h1 {
+        margin-top: 60px;
+        font-size: 44px;
+        line-height: 44px;
     }
 
-    .my-content a {
+    .buttons {
+        flex-direction: column;
+        padding-bottom: 100px;
+    }
+
+    .buttons a {
         width: 400px;
         height: 200px;
     }
 }
 
 @media(max-width: 450px) {
-    .my-content a {
+    .title h1 {
+        margin-top: 40px;
+        font-size: 36px;
+        line-height: 36px;
+    }
+
+    .buttons {
+        padding-bottom: 80px;
+    }
+
+    .buttons a {
         width: 100%;
         height: 150px;
         font-size: 18px;
     }
 
-    .my-content a:hover {
+    .buttons a:hover {
         font-size: 18.5px;
     }
 }
