--- a/src/app/guest/home/home.component.html
+++ b/src/app/guest/home/home.component.html
@@ -1,13 +1,19 @@
 <div class="my-container">
     <div class="my-content">
 
-        <a routerLink="/day-1">
-            1 DAY FORECAST
-        </a>
+        <div class="title">
+            <h1>Weather forecasts</h1>
+        </div>
 
-        <a routerLink="/day-5">
-            5 DAYS FORECAST
-        </a>
+        <div class="buttons">
+            <a routerLink="/day-1">
+                1 DAY FORECAST
+            </a>
+
+            <a routerLink="/day-5">
+                5 DAYS FORECAST
+            </a>
+        </div>
 
     </div>
 </div>
