--- a/src/app/guest/weather/weather.component.css
+++ b/src/app/guest/weather/weather.component.css
@@ -6,14 +6,14 @@
     /* border: 2px solid black; */
 }
 
+/* T O O L B A R ======================================== */
 .toolbar-container {
     width: 100%;
-    height: 80px;
+    height: 10%;
     background: rgba(0, 0, 0, 0.2);
 }
 
 .toolbar-content {
-    position: relative;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -25,38 +25,18 @@
     /* border: 2px solid red; */
 }
 
-.my-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* border: 2px solid black; */
-}
+/* HOME => FAVORITES --------------- */
 
-button {
-    cursor: pointer;
-    color: rgb(255, 255, 255);
-    font-size: 18px;
-    margin: 10px;
-    padding: 10px 30px;
-    background: rgba(0, 0, 0, 0.2);
-    border: none;
-    border-radius: 6px;
-}
-
-button:hover {
-    background: rgba(0, 0, 0, 0.3);
-}
-
-button:hover+.favorite-list {
-    display: block;
+/* SEARCH ------------------------- */
+.search {
+    width: 500px;
 }
 
 .search form {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 12px;
-    height: 100%;
+    padding: 12px 16px;
     border: none;
     border-radius: 50px;
     background: white;
@@ -66,34 +46,88 @@ button:hover+.favorite-list {
     font-size: 16px;
     width: 100%;
     outline: none;
-    background: none;
     border: none;
+    background: none;
 }
 
 .search img {
     cursor: pointer;
 }
 
-.favorite-list {
+/* FAVORITES ------------------------- */
+.favorites {
+    position: relative;
+    display: inline-block;
+}
+
+.home a,
+.favorites a {
+    padding: 16px 30px;
+    color: rgb(255, 255, 255);
+    font-size: 18px;
+    cursor: pointer;
+    border: none;
+    border-radius: 6px;
+    background: rgba(0, 0, 0, 0.3);
+}
+
+.home a:hover,
+.favorites a:hover {
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.dropdown-fav {
     position: absolute;
     display: none;
-    top: 52px;
-    right: 10px;
     z-index: 1;
 }
 
-.favorite-list:hover {
+.favorites:hover .dropdown-fav {
     display: block;
 }
 
-.favorite-head:hover {
-    background: none;
+/* TABLE ----------------------------- */
+table {
+    color: white;
+    box-shadow: 0px 6px 10px 0px rgba(0, 0, 0, 0.2);
+    border-collapse: collapse;
+    background: rgba(0, 0, 0, 0.3);
 }
 
+tr {
+    cursor: pointer;
+    border-bottom: 1px solid white;
+}
+
+tr:last-child {
+    border: none;
+}
+
+tr:hover {
+    background: rgba(0, 0, 0, 0.5);
+}
+
+th,
+td {
+    padding: 16px;
+    font-size: 20px;
+    white-space: nowrap;
+    /* border: 2px solid red; */
+}
+
+/* B O D Y ============================================= */
 .content {
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* border: 2px solid black; */
+}
+
+.my-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 90%;
     /* border: 2px solid black; */
 }
 
@@ -197,19 +231,8 @@ hr {
     border-radius: 20px;
 } */
 
-table {
-    color: white;
-    background: rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 6px 10px 0px rgba(62, 62, 62, 0.2);
-    border-collapse: collapse;
-}
-
-tbody tr {
-    cursor: pointer;
-}
-
-.close-svg {
-    cursor: pointer;
+.history-head:hover {
+    background: none;
 }
 
 .down-svg {
@@ -220,24 +243,8 @@ tbody tr {
     background: rgba(0, 0, 0, 0.5);
 }
 
-tr {
-    border-bottom: 1px solid white;
-}
 
-tr:hover {
-    background: rgba(0, 0, 0, 0.5);
-}
 
-.history-head:hover {
-    background: none;
-}
-
-th,
-td {
-    font-size: 20px;
-    padding: 10px 20px;
-    /* border: 2px solid red; */
-}
 
 @media(max-width: 1040px) {
     .search input {
@@ -248,7 +255,7 @@ td {
         font-size: 16px;
     }
 
-    .favorite-list {
+    .dropdown-fav {
         top: 48px;
     }
 
