--- a/src/app/guest/weather/weather.component.html
+++ b/src/app/guest/weather/weather.component.html
@@ -19,7 +19,7 @@
 
             <!-- FAVORITES ------------------------------------------------------------------- -->
             <div class="favorites">
-                <a>Favorites</a>
+                <a>Favs</a>
                 <div class="dropdown-fav">
                     <table>
                         <thead>
